Entity Framework Core DbContext

--- a/DevFitness.API/appsettings.json
+++ b/DevFitness.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevFitnessCs": "Server=localhost\\SQLEXPRESS;Database=DevFitness;Trusted_Connection=True;"
+  }
 }
